fixed error on hero page typing animation clipping

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -140,7 +140,7 @@
 }
 
 .typing {
-  width: 25ch;
+  width: 100%;
   animation: typing 3s steps(40), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
